--- a/custom/custom_crm_logo/views/assets.xml
+++ b/custom/custom_crm_logo/views/assets.xml
@@ -1,7 +1,8 @@
 <odoo>
   <template id="assets_backend" name="Custom CRM Logo Assets" inherit_id="web.assets_backend">
     <xpath expr="." position="inside">
-      <link rel="stylesheet" href="/custom_crm_logo/static/src/css/custom_logo.css"/>
+      <link rel="stylesheet" type="text/scss" href="/custom_crm_logo/static/src/scss/custom_logo.scss"/>
     </xpath>
   </template>
 </odoo>
+
